--- a/style.css
+++ b/style.css
@@ -62,3 +62,12 @@ body{
 .container__imagem{
         margin: 1em 0 2em 0;
 }
+
+.container__caixa {
+        margin: 0 6em;
+}
+
+.secundario__imagem{
+        width: 80%;
+}
+}
