--- a/style.css
+++ b/style.css
@@ -70,4 +70,11 @@ body{
 .secundario__imagem{
         width: 80%;
 }
+
+.secundario{
+        align-items: center;
+        margin: 0 10em;
+}
+
+.descricao__titulo
 }
