--- a/style.css
+++ b/style.css
@@ -76,5 +76,32 @@ body{
         margin: 0 10em;
 }
 
-.descricao__titulo
+.descricao__titulo {
+        font-weight: 700;
+        font-size: 48px;
+        color: var(--brando-principal);
+        margin-bottom: 0.1em;
+}
+
+.descricao__texto {
+        color: var(--cinza-secundario);
+}
+
+.secundario__botao {
+        display: : inline-block;
+        margin-top: 1em;
+}
+
+.container__descricao {
+        padding: 2em;
+}
+
+.dispositivos__lista {
+        display: flex;
+        justify-content: center;
+        list-style-type: none;
+        margin: 5em 0;
+}
+
+
 }
