--- a/style.css
+++ b/style.css
@@ -103,5 +103,46 @@ body{
         margin: 5em 0;
 }
 
+.dispositivos {
+        text-align: center;
+}
+
+.dispositivos__titulo {
+        font-size: 48px;
+        color: var(--brando-principal);
+}
+
+.lista__item {
+        font-size: 32px;
+        color: var(--brando-principal);
+}
+
+.rodape {
+        text-align: center;
+        margin: 5em 3em;
+}
+
+.rodape__lista {
+        display: flex;
+        justify-content: center;
+        list-style-type: none;
+        margin-top: 1em;
+}
+
+.lista__link a{
+        text-decoration: none;
+        color: var(--brando-principal);
+        margin-left: 1em;
+}
+
+.rodape__texto {
+        margin: 1em 0;
+        color: var(--cinza-secundario);
+        font-size: 14px;
+}
+
+.lista__link a:hover {
+        color: var(--botao-azul);
+}
 
 }
